--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Calculadora Fit Macros</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-97H6WF8DXE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-97H6WF8DXE');
+    </script>
   </head>
   <body>
     <noscript>
